--- a/C/page_layout_full.html
+++ b/C/page_layout_full.html
@@ -2,6 +2,96 @@
 <head>
 <style>
 /* Write your code here */
+body{
+  background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/pf-misctexture01-tong-019-chim-02_1_3.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=2c732ce5066026b4fe5ca5d78abbe706");
+  width:700px;
+  
+  margin-left: auto;
+  margin-right: auto;
+  
+ 
+}
+.logo_part{
+  display: flex;
+  margin-top:7px;
+}
+.search{
+  margin-top:30px;
+  margin-left: 30px;
+}
+
+.cards{
+  
+  display: flex;
+  width: 600px;
+  flex-wrap: wrap;
+  
+}
+.card{
+  flex-basis: 0;
+  border: solid;
+  border-width: 3px;
+  border-color: red;
+  border-radius:5px;
+  margin: auto;
+  margin-top: 5px;
+  margin-bottom: 10px; 
+  display: flex;
+  flex-direction: column; 
+  
+
+  
+}
+.container{
+  background-color: white;
+  width: 600px;
+  height: 80%;
+}
+nav a{
+
+  background-color: grey;
+  color: black;
+  padding: 8px 49px;
+  text-decoration: none;
+}
+nav a:hover{
+  background: red;
+  color:white;
+}
+
+
+.title{
+  text-decoration: none;
+  text-align: center;
+  background-color: #92DFF2;
+  color:white;
+  font-size: 15pt;
+  flex-grow: 1; 
+
+}
+
+
+
+
+footer{
+  
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding-top: 20px;
+  position: absolute;
+  left: 420;
+  bottom: 0;
+  width: 600px;
+  height: 50px;
+  
+}
+
+.price{
+  font-weight: bold;
+  text-align: center;
+
+}
 </style>
 </head>
 <body>
@@ -87,5 +177,6 @@
   @copy; 2017 Wheels.kz. All cars
 </footer>
 </div>
+</body>
 </html>
 
