--- a/E/letters.html
+++ b/E/letters.html
@@ -2,6 +2,31 @@
 <head>
 <style>
 /* Write your code here */
+.letters{
+  display: flex;
+  border: 2px solid; width: 97vh;
+
+
+  border-color: #9A240C;
+ 
+  flex-wrap: wrap;
+}
+.letters div{
+  flex-shrink: 0;
+  border: solid ;
+  margin-left: 4px;
+  margin-top: 4px;
+  margin-bottom:4px;
+  margin-right: 4px;
+  background-color: #9A240C;
+  border-color: #9A240C;
+  border-radius:50%; height: 45px; width: 45px;
+  text-align: center;
+  font-size: 30pt;
+  color: white;
+
+
+}
 </style>
 </head>
 <body>
