--- a/M/page_layout.html
+++ b/M/page_layout.html
@@ -2,6 +2,36 @@
 <head>
 <style>
 /* Write your code here */
+.left_part{
+  
+  width: 500px;
+  height: 600px;
+  background-color: #810D2E;
+  font-size: 30pt; color: white;
+  text-align: center;
+  display:flex;
+  float: left;
+   
+}
+h1{
+  margin:auto;
+}
+.right_part{
+  float: left;
+}
+h3{
+ text-align: center;
+ font-size: 17pt;
+ font-weight: 800;
+ margin-left: 200px;             
+}
+a{
+ color:#822EAC;
+}
+li{
+  font-size: 13pt;
+}
+
 </style>
 </head>
 <body>
