--- a/C/page_layout_full.html
+++ b/C/page_layout_full.html
@@ -5,7 +5,9 @@
 body{
   background-image: url("https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/pf-misctexture01-tong-019-chim-02_1_3.jpg?w=800&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=2c732ce5066026b4fe5ca5d78abbe706");
   width:700px;
-  
+  margin-bottom: 0;
+padding-bottom:0;
+
   margin-left: auto;
   margin-right: auto;
   
@@ -14,6 +16,7 @@ body{
 .logo_part{
   display: flex;
   margin-top:7px;
+  background-color: white;
 }
 .search{
   margin-top:30px;
@@ -43,9 +46,14 @@ body{
   
 }
 .container{
-  background-color: white;
+  padding-bottom: 0;
   width: 600px;
-  height: 80%;
+ height: 100%;
+  position: relative;
+
+}
+.main_section{
+  background-color: white;
 }
 nav a{
 
@@ -74,13 +82,13 @@ nav a:hover{
 
 
 footer{
-  
+  position: absolute;
   background-color: black;
   color: white;
   text-align: center;
   padding-top: 20px;
-  position: absolute;
-  left: 420;
+  margin-top: auto;
+  left: 0;
   bottom: 0;
   width: 600px;
   height: 50px;
