--- a/M/page_layout.html
+++ b/M/page_layout.html
@@ -2,23 +2,27 @@
 <head>
 <style>
 /* Write your code here */
+body{
+  display: flex;
+  margin-left: 0;
+  margin-top: 0;
+}
+
 .left_part{
   
   width: 500px;
   height: 600px;
+ display: flex;
   background-color: #810D2E;
   font-size: 30pt; color: white;
   text-align: center;
-  display:flex;
-  float: left;
-   
+  
+  
 }
 h1{
   margin:auto;
 }
-.right_part{
-  float: left;
-}
+
 h3{
  text-align: center;
  font-size: 17pt;
